setting default distance to selected (add dialog). And fixed input aligning css

--- a/web/runs/add_run_dialog.css
+++ b/web/runs/add_run_dialog.css
@@ -5,5 +5,8 @@
 
 #time paper-input {
 		width: 6em;
+}
+
+paper-input {
 		margin: 0.5em;
 }
